Fixed bug in getATUsForRange typo without reversed ATUs, contig split should work now