@@ -2,6 +2,7 @@ package ru.itmo.ctlab.hict.hict_library.chunkedfile;
 
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import ru.itmo.ctlab.hict.hict_library.chunkedfile.resolution.ResolutionDescriptor;
 import ru.itmo.ctlab.hict.hict_library.domain.ATUDescriptor;
@@ -17,6 +18,7 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @RequiredArgsConstructor
+@Slf4j
 public class ScaffoldingOperations {
   private @NotNull
   final ChunkedFile chunkedFile;
@@ -150,94 +152,6 @@ public class ScaffoldingOperations {
 
         final var oldATUsLengthBinsPrefixSum = oldContigDescriptor.getAtuPrefixSumLengthBins().get(i);
 
-        /*
-        final var oldContigATUs = switch (oldContigNode.getTrueDirection()) {
-          case FORWARD -> oldContigDescriptor.getAtus().get(i);
-          case REVERSED -> {
-            final var tmp = oldContigDescriptor.getAtus().get(i).parallelStream().map(ATUDescriptor::reversed).collect(Collectors.toList());
-            Collections.reverse(tmp);
-            yield tmp;
-          }
-        };
-
-
-
-        final var indexOfATUWhereSplitOccurs = switch (oldContigNode.getTrueDirection()) {
-          case FORWARD ->
-            BinarySearch.rightBinarySearch(oldATUsLengthBinsPrefixSum, deltaBinsFromContigStartAtResolution);
-          case REVERSED ->
-            oldATUsLengthBinsPrefixSum.length - 1 - BinarySearch.leftBinarySearch(oldATUsLengthBinsPrefixSum, oldContigLengthBinsAtResolution - deltaBinsFromContigStartAtResolution); //TODO: BinarySearch.
-        };
-
-        assert (indexOfATUWhereSplitOccurs >= 0) : "Wrong index of splitting ATU";
-        assert (indexOfATUWhereSplitOccurs < oldATUsLengthBinsPrefixSum.length) : "Wrong index of splitting ATU";
-
-        final var oldJoinATU = oldContigATUs.get(indexOfATUWhereSplitOccurs);
-
-        final var newLeftATUs = new ArrayList<>(oldContigATUs.subList(0, indexOfATUWhereSplitOccurs));
-        final List<@NotNull ATUDescriptor> newRightATUs;
-
-
-        final var leftATUsLength = (indexOfATUWhereSplitOccurs == 0) ? 0L : oldATUsLengthBinsPrefixSum[indexOfATUWhereSplitOccurs - 1];
-        final var rightATUsLength = oldATUsLengthBinsPrefixSum[oldATUsLengthBinsPrefixSum.length - 1] - oldATUsLengthBinsPrefixSum[indexOfATUWhereSplitOccurs];
-
-        final var deltaL = (int) (deltaBinsFromContigStartAtResolution -
-          switch (oldContigNode.getTrueDirection()) {
-            case FORWARD -> leftATUsLength;
-            case REVERSED -> rightATUsLength;
-          }
-        );
-
-        assert (deltaL <= oldJoinATU.getLength()) : "Need to shrink ATU that is already smaller?";
-
-
-        if (deltaL > 0) {
-          final var newLeftJoinATU = ATUDescriptor.builder()
-            .stripeDescriptor(oldJoinATU.getStripeDescriptor())
-            .direction(oldJoinATU.getDirection())
-            .startIndexInStripeIncl(
-              switch (oldJoinATU.getDirection()) {
-                case FORWARD -> oldJoinATU.getStartIndexInStripeIncl();
-                case REVERSED -> oldJoinATU.getEndIndexInStripeExcl() - deltaL;
-              }
-            )
-            .endIndexInStripeExcl(
-              switch (oldJoinATU.getDirection()) {
-                case FORWARD -> oldJoinATU.getStartIndexInStripeIncl() + deltaL;
-                case REVERSED -> oldJoinATU.getEndIndexInStripeExcl();
-              }
-            )
-            .build();
-          newLeftATUs.add(newLeftJoinATU);
-          assert (newLeftJoinATU.getLength() == deltaL) : "New left ATU has incorrect size??";
-        }
-
-        final var newRightJoinATUStart = switch (oldJoinATU.getDirection()) {
-          case FORWARD -> oldJoinATU.getStartIndexInStripeIncl() + deltaL + ((i > 1) ? 0 : 1);
-          case REVERSED -> oldJoinATU.getStartIndexInStripeIncl();
-        };
-
-        final var newRightJoinATUEnd = switch (oldJoinATU.getDirection()) {
-          case FORWARD -> oldJoinATU.getEndIndexInStripeExcl();
-          case REVERSED -> oldJoinATU.getEndIndexInStripeExcl() - deltaL - ((i > 1) ? 0 : 1);
-        };
-
-        if (newRightJoinATUEnd > newRightJoinATUStart) {
-          newRightATUs = new ArrayList<>(oldContigATUs.subList(indexOfATUWhereSplitOccurs, oldContigATUs.size()));
-          final var newRightJoinATU = ATUDescriptor.builder()
-            .stripeDescriptor(oldJoinATU.getStripeDescriptor())
-            .direction(oldJoinATU.getDirection())
-            .startIndexInStripeIncl(newRightJoinATUStart)
-            .endIndexInStripeExcl(newRightJoinATUEnd)
-            .build();
-          newRightATUs.set(0, newRightJoinATU);
-          assert ((oldJoinATU.getLength() - ((i > 1) ? 0 : 1)) == (deltaL + newRightJoinATU.getLength()));
-        } else {
-          newRightATUs = oldContigATUs.subList(1 + indexOfATUWhereSplitOccurs, oldContigATUs.size());
-          assert ((oldJoinATU.getLength() - ((i > 1) ? 0 : 1)) == deltaL);
-        }
-         */
-
         final var newLeftATUs = this.chunkedFile.matrixQueries().getATUsForRange(ResolutionDescriptor.fromResolutionOrder(i), contigStartBinsAtResolution, splitPositionBinsAtResolution, false);
         final var newRightATUs = this.chunkedFile.matrixQueries().getATUsForRange(ResolutionDescriptor.fromResolutionOrder(i), splitPositionBinsAtResolution + ((i > 1) ? 0 : 1), contigStartBinsAtResolution + oldContigLengthBinsAtResolution, false);
 
@@ -262,13 +176,12 @@ public class ScaffoldingOperations {
             newContigAtus.get(1).add(newRightATUs);
           }
           case REVERSED -> {
-            Collections.reverse(newLeftATUs);
-            Collections.reverse(newRightATUs);
-            newContigAtus.get(0).add(newLeftATUs.parallelStream().map(ATUDescriptor::reversed).toList());
-            newContigAtus.get(1).add(newRightATUs.parallelStream().map(ATUDescriptor::reversed).toList());
+            newContigAtus.get(0).add(newLeftATUs.parallelStream().map(ATUDescriptor::reversed).collect(Collectors.toList()));
+            newContigAtus.get(1).add(newRightATUs.parallelStream().map(ATUDescriptor::reversed).collect(Collectors.toList()));
+            Collections.reverse(newContigAtus.get(0).get(i-1));
+            Collections.reverse(newContigAtus.get(1).get(i-1));
           }
         }
-
       }
 
       final var newCds = IntStream.range(0, 2).mapToObj(i -> new ContigDescriptor(
